a fix (Bug #2298: Trailing whitespace inconsistently handled in WHERE clause)